PA5/tests/negative-examples/divideZeroExpr.cl
class Main inherits IO {
  main() : Object { 
    5/(5 - 5)
  } ;
} ; 
